--- a/manuscripts/24-radim-fertility-usa/24-radim-fertility-usa.qmd
+++ b/manuscripts/24-radim-fertility-usa/24-radim-fertility-usa.qmd
@@ -1,7 +1,7 @@
 ---
 title: "Causal Effect of Religious Service Attendance On Fertility in an American Sample"
 abstract: |
- According to 
+ Abstract here ...
    **KEYWORDS**: *Causal Inference*; *Longitudinal*; *Religion*; *Fertility*.
 author: 
   - name: Radim Chvaja
@@ -19,6 +19,7 @@ editor_options:
   chunk_output_type: console
 format:
   docx:
+    bibliography: /Users/joseph/GIT/templates/bib/references.bib
   pdf:
     sanitise: true
     keep-tex: true
@@ -201,16 +202,42 @@ plot_binary <- margot::margot_plot(df_bind_results,
 
 #plot_binary
 
+
+# ggsave(
+#   plot_binary,
+#   path = here::here(here::here(push_mods, "figs")),
+#   width = 12,
+#   height = 8,
+#   units = "in",
+#   filename = "plot_binary.png",
+#   device = 'png',
+#   limitsize = FALSE,
+#   dpi = 600
+# )
+
+# ggsave(
+#   love_plot_one,
+#   path = here::here(here::here(push_mods, "figs")),
+#   width = 12,
+#   height = 8,
+#   units = "in",
+#   filename = "love_plot_one.png",
+#   device = 'png',
+#   limitsize = FALSE,
+#   dpi = 600
+# )
+
+
+
 ```
 
 ## Introduction
 
-Human societies are characterised by intricate divisions of labour that extend beyond family ties. Humans are obligate cooperators, unable to live apart from society [@sterelny2007social]
-These involve both direct and indirect reciprocal relationships across multiple domains, such as survival skills, communal protection, building, learning, food gathering, hunting, commerce across long distances, and tool-craft [@sterelny2011hominins]. It has been noted that children rely on this cooperative framework for nearly two decades post-birth [@gurven2006energetic], and parents require the broader social group's support to provide for their offspring [@shaver2019alloparenting], evolutionary models of religion posit that religion evolved deep in the human lineage to foster cooperation [@sosis2003cooperation], with gene-culture co-evolution elaborating dispositions to religion, and religous cultural systems, whose ultimate functions promote fertility [@rowthorn2011religion]. The cooperative functions of these systems may include mate selection [@blume2009reproductive] and collective child-rearing [@shaver2020church]. Indeed, the function of mate-selection and collective child rearing might not be easily disentangled; offspring unite parents to a common genetic fate.  Sex in humans requires parenting through a long period of adolesence, with demands selecting for extensions of the human life-span through grandparenting [@kaplan2000theory].  In this sense, it has been claimed that 'reproduction poses biology’s most fundamental cooperation problem' 
+Humans are obligate cooperators, unable to live apart from society [@sterelny2007social]. Human societies are characterised by intricate divisions of labour that extend beyond family ties. These involve both direct and indirect reciprocal relationships across multiple domains -- communal protection, building,  food gathering and hunting, commerce, tool and bush craft [@sterelny2011hominins]. It has been noted that children rely on this cooperative framework for nearly two decades post-birth [@gurven2006energetic], and parents require the broader social group's support to provide for their offspring [@shaver2019alloparenting]. Evolutionary models of religion posit that religion evolved deep in the human lineage to foster cooperation [@sosis2003cooperation] through dedicated cognitive and cultural architectures desgined to promote fertility [@rowthorn2011religion]. Although cooperation is typically modelled on examples of trade and warfar, the cooperative benefits of these systems include mate selection [@blume2009reproductive], mate evaluation [@irons2001religion], and collective child-rearing [@shaver2020church]. Indeed, the function of mate-selection and collective child rearing might not be easily disentangled; offspring unite parents to a common genetic fate. As such, 'reproduction poses biology’s most fundamental cooperation problem' [@Bulbulia_2015]
 
 Notably, sexual signalling theory posits that differences in reproductive potentials between males and females lead to different valuations of traits in prospective mates. For example, it has been proposed that males may be are more concerned about female infidelity given that males face risks of cuckoldry, whereas and may be concerned about resource diversion resulting from male infidelity or diminished social prestige. This gradient evolved within humans to extend cooperative networks beyond immediate reciprocity [@alexander2017biology]. It has been proposed that males engage in high-risk cooperation, such as hunting and defence to obtain and signal prestige to mates [@gurven2009men]. Indeed preliminary cross-sectional evidence suggests that highly religious males attend religious service more frequently than highly religious females and that church attendance is associated with greater offspring [@Bulbulia_2015]. Although such associational evidence is consistent with the predictions of both an alloparenting model of cooperation and sexual-specific models of cooperation, presently, we are unaware of any systematic attempt to leverage time series data to assess whether religious behaviours cause greater offspring.  
 
-Here, we address this gap in understanding by quantitatively assessing the causal effects of regular religious service attendance on offspring in a population of [**Radim to clarify ...US citizens...**] (2) Male-specific enhancements to fertility within this same population. 
+Here, we first address this gap in understanding by quantitatively assessing the causal effects of regular religious service attendance on offspring in a population of [**describe here**]. Secondly, we consider male-specific enhancements to fertility within this same population. 
 
 
 ## Method
@@ -238,7 +265,7 @@ We adopted a three-wave model for causal identification in which baseline measur
 
 ### Exposure or Treatment Variable
 
-Our study aimed to estimate causal effects by comparing two potential interventions:
+We estimated causal effects by comparing two interventions:
 
 1. The marginal effect of religious service attendance across the entire sampled population.
 2. The stratum-specific effects for females and males separately.
@@ -259,15 +286,17 @@ Important note: We used the ritual scale variable at baseline for our analysis, 
 
 Offspring measures were collected in the final study wave in 2013, eight years after exposure and ten years after baseline. Since participants were between 13 and 17 years old at baseline, their fertility was assessed from 23 to 27 years old. [**Radim to check**]
 
-We effects on the probability of having two or more children in 2013 -- or ‘replacement fertility’.... [JS SAY MORE].
+We effects on the probability of having two or more children in 2013 -- or ‘replacement fertility’.... [**say more**].
 
 
 ### Inclusion Criteria
 
-- No missing data in the baseline wave for the religious service attendance.
-- Missing covariate data at baseline were permitted.
+1. Responded at baseline.
+2. No missing data in the baseline wave for the religious service attendance.
+3. Missing covariate data at baseline were permitted, handled using imputation in the `mice` package [@vanbuuren2018]
+4. Loss-to-follow up permitted in both the exposure and outcome waves, handled using inverse-probability of censoring weights [@bulbulia2024PRACTICAL; @williams2021].
 
-A total of `r n_participants` individuals met these criteria and were included in the study.
+Of the original `r n_total` orgiginal participants, a total of `r n_participants` individuals met these criteria and were included in the study.
 
 
 
@@ -302,7 +331,7 @@ table_exposures |>  kbl(format = "markdown")
 ```
 
 
-tbl-table-exposures-code presents baseline (NZAVS time 10) and exposure wave (NZAVS time 11) statistics for the exposure variable: forgiveness (range 1-7). All models adjusted for the pandemic alert level because the treatment wave (NZAVS time 11) occurred during New Zealand's COVID-19 pandemic. The pandemic is not a "confounder" because a confounder must be related both to the treatment and the outcome. At the end of the study, however, all participants had been exposed to the global pandemic.  However, to satisfy the causal consistency assumption, all treatments must be conditionally equivalent within levels of all covariates [@vanderweele2013]. Because COVID may have changed the quality and accessibility of forgiveness, we included each participants lockdown condition as a covariate [@sibley2021]. We employed inverse probability of censoring weights, which were computed non-parametrically within our statistical models using the `lmtp` package to mitigate systematic biases arising from attrition and missingness.
+@tbl-table-exposures-code presents baseline (NZAVS time 10) and exposure wave (NZAVS time 11) statistics for the exposure variable: forgiveness (range 1-7). All models adjusted for the pandemic alert level because the treatment wave (NZAVS time 11) occurred during New Zealand's COVID-19 pandemic. The pandemic is not a "confounder" because a confounder must be related both to the treatment and the outcome. At the end of the study, however, all participants had been exposed to the global pandemic.  However, to satisfy the causal consistency assumption, all treatments must be conditionally equivalent within levels of all covariates [@vanderweele2013]. Because COVID may have changed the quality and accessibility of forgiveness, we included each participants lockdown condition as a covariate [@sibley2021]. We employed inverse probability of censoring weights, which were computed non-parametrically within our statistical models using the `lmtp` package to mitigate systematic biases arising from attrition and missingness.
 
 
 {{< pagebreak >}}
@@ -351,12 +380,11 @@ We implemented inverse probability of censoring weights to address potential bia
 
 6. To mitigate extreme weights, we computed stabilised weights by multiplying the inverse probability weights by the marginal probability of not being lost to follow-up.
 
-7. These stabilized censoring weights were then combined with the original sample weights to create composite weights for subsequent analyses.
+7. These stabilised censoring weights were then combined with the original sample weights to create composite weights for subsequent analyses.
 
 8. Participants lost to follow-up between baseline and the exposure wave were removed from the analysis dataset.
 
-
-Our method assumes that loss to follow-up/missing responses are ‘missing at random’ (MAR) conditional on the observed variables. This means that all variables influencing dropout are captured by the variables used in the prediction model. If there are unobserved variables influencing dropout, some bias may remain. This approach is also subject to model misspecification bias.  However, by using SuperLearner - which combines multiple machine learning methods -- our models can flexibly (and non-parametrically) capture complex relationships in the data and reduce the risk of model misspecification compared to using a single model.
+Our method assumes that loss to follow-up/missing responses are 'missing at random' (MAR) conditional on the observed variables. This means that all variables influencing dropout are captured by the variables used in the prediction model. If there are unobserved variables influencing dropout, some bias may remain. This approach is also subject to model misspecification bias.  However, by using SuperLearner - which combines multiple machine learning methods -- our models can flexibly (and non-parametrically) capture complex relationships in the data and reduce the risk of model misspecification compared to using a single model.
 
 ### Causal Assumptions
 
@@ -367,6 +395,9 @@ To estimate causal effects reliably, our study must credibly meet three fundamen
 2. **Exchangeability**: we assume that, conditional on observed covariates, assignment to the treatment group is independent of the potential outcomes; that is, we assume no unmeasured confounding (@hernan2024WHATIF; @chatton2020).
 
 3. **Positivity**: we assume that within all covariate-defined strata necessary for achieving exchangeability, there is a non-zero probability of receiving each possible treatment level. The positivity assumption ensures that treatment effects are estimable across the spectrum of observed covariate combinations (@westreich2010).
+
+
+For further discussion, see @bulbulia2023; @bulbulia2023a; @bulbulia2023b
 
 The target population for this study comprises [**Radim to check**]
 
@@ -548,8 +579,8 @@ Our findings may be summaries as follows:
    Regular religious service attendance is associated with a 62.2% increase in the probability of having two or more children (RR = 1.622, 95% CI: 1.140 to 2.306). This effect is statistically reliable as the confidence interval does not include 1. The E-vale of 1.549 suggests moderate robustness to unmeasured confounding. 
 
 2. Sex-Specific Effects:
-   - Females: There's a 30.3% increase in probability for females (RR = 1.303, 95% CI: 0.804 to 2.112), but this effect is not statistically reliable as the confidence interval includes 1.  We cannot rule out the prospect that religious service attendance has no effect in the eight years following the regular religious service 'treatment.'
-   - Males: There's a much larger 214.2% increase in probability for males (RR = 3.142, 95% CI: 1.435 to 6.878). This effect is statistically reliable and considerably more robust than for females.
+  - Females: There's a 30.3% increase in probability for females (RR = 1.303, 95% CI: 0.804 to 2.112), but this effect is not statistically reliable as the confidence interval includes 1.  We cannot rule out the prospect that religious service attendance has no effect in the eight years following the regular religious service 'treatment.'
+  - Males: There's a much larger 214.2% increase in probability for males (RR = 3.142, 95% CI: 1.435 to 6.878). This effect is statistically reliable and considerably more robust than for females.
 
 We infer that the causal effect of religious service attendance in the target population (defined to be the sample population at baseline) is considerably stronger in males than in females. Recall that the E-values indicate the strength of unmeasured confounding needed to explain away these effects. The male-specific result (E-value = 5.736) appears more robust to potential unmeasured confounding than the female-specific or overall results. This finding suggests potential sex-specific differences in how religious service attendance relates to fertility. 
 
@@ -560,19 +591,16 @@ In summary, regular religious service attendance causally associateed with incre
 
 ### Limitation
 
-- Population
-- Sample (young)
-- Measures -- can be unmeasured confounding 
+- Population. Generality? 
+- Sample (young not much scope for religious change or for fertility)
+- Uncertainty in the location estimates for males (although bounded from zero).
+- Reliance on model assumptions for missingingness (MAR assumptions...)
 
 
 ### Strengths
-- Evidence for causal effect of religious service on fertility
-- Clear difference by gender: males replacing earlier. 
-
-
-### Evidence for Gender-Specific Effects? 
-
-Not necessarily 
+- Evidence for causal effect of religious service on fertility is considerable, particularly for males. 
+- Evidence is causal. 
+- Sensitivity analysis shows robustness to unmeasured confounding .
 
 
 Future research... etc. 
@@ -587,6 +615,9 @@ Future research... etc.
 
 ### Data Availability
 
+The code for this analysis can be found here: https://github.com/go-bayes/models/blob/main/scripts/24-radim-usa/jb-analysis-for-radim.R
+
+[radim to provide data as ethics permits]
 
 ### Acknowledgements
 
