--- a/manuscripts/24-radim-fertility-usa/24-radim-fertility-usa.tex
+++ b/manuscripts/24-radim-fertility-usa/24-radim-fertility-usa.tex
@@ -232,40 +232,38 @@ University, Faculty of Arts, University of Otago
 \begin{document}
 \maketitle
 \begin{abstract}
-According to \textbf{KEYWORDS}: \emph{Causal Inference};
+Abstract here \ldots{} \textbf{KEYWORDS}: \emph{Causal Inference};
 \emph{Longitudinal}; \emph{Religion}; \emph{Fertility}.
 \end{abstract}
 
 \subsection{Introduction}\label{introduction}
 
-Human societies are characterised by intricate divisions of labour that
-extend beyond family ties. Humans are obligate cooperators, unable to
-live apart from society (\citeproc{ref-sterelny2007social}{Sterelny,
-2007}) These involve both direct and indirect reciprocal relationships
-across multiple domains, such as survival skills, communal protection,
-building, learning, food gathering, hunting, commerce across long
-distances, and tool-craft (\citeproc{ref-sterelny2011hominins}{Sterelny,
-2011}). It has been noted that children rely on this cooperative
-framework for nearly two decades post-birth
-(\citeproc{ref-gurven2006energetic}{Gurven \& Walker, 2006}), and
-parents require the broader social group's support to provide for their
-offspring (\citeproc{ref-shaver2019alloparenting}{Shaver et al., 2019}),
-evolutionary models of religion posit that religion evolved deep in the
-human lineage to foster cooperation
-(\citeproc{ref-sosis2003cooperation}{Sosis \& Bressler, 2003}), with
-gene-culture co-evolution elaborating dispositions to religion, and
-religous cultural systems, whose ultimate functions promote fertility
-(\citeproc{ref-rowthorn2011religion}{Rowthorn, 2011}). The cooperative
-functions of these systems may include mate selection
-(\citeproc{ref-blume2009reproductive}{Blume, 2009}) and collective
+Humans are obligate cooperators, unable to live apart from society
+(\citeproc{ref-sterelny2007social}{Sterelny, 2007}). Human societies are
+characterised by intricate divisions of labour that extend beyond family
+ties. These involve both direct and indirect reciprocal relationships
+across multiple domains -- communal protection, building, food gathering
+and hunting, commerce, tool and bush craft
+(\citeproc{ref-sterelny2011hominins}{Sterelny, 2011}). It has been noted
+that children rely on this cooperative framework for nearly two decades
+post-birth (\citeproc{ref-gurven2006energetic}{Gurven \& Walker, 2006}),
+and parents require the broader social group's support to provide for
+their offspring (\citeproc{ref-shaver2019alloparenting}{Shaver et al.,
+2019}). Evolutionary models of religion posit that religion evolved deep
+in the human lineage to foster cooperation
+(\citeproc{ref-sosis2003cooperation}{Sosis \& Bressler, 2003}) through
+dedicated cognitive and cultural architectures desgined to promote
+fertility (\citeproc{ref-rowthorn2011religion}{Rowthorn, 2011}).
+Although cooperation is typically modelled on examples of trade and
+warfar, the cooperative benefits of these systems include mate selection
+(\citeproc{ref-blume2009reproductive}{Blume, 2009}), mate evaluation
+(\citeproc{ref-irons2001religion}{Irons, 2001}), and collective
 child-rearing (\citeproc{ref-shaver2020church}{Shaver et al., 2020}).
 Indeed, the function of mate-selection and collective child rearing
 might not be easily disentangled; offspring unite parents to a common
-genetic fate. Sex in humans requires parenting through a long period of
-adolesence, with demands selecting for extensions of the human life-span
-through grandparenting (\citeproc{ref-kaplan2000theory}{Kaplan et al.,
-2000}). In this sense, it has been claimed that `reproduction poses
-biology's most fundamental cooperation problem'
+genetic fate. As such, `reproduction poses biology's most fundamental
+cooperation problem' (\citeproc{ref-Bulbulia_2015}{Bulbulia et al.,
+2015})
 
 Notably, sexual signalling theory posits that differences in
 reproductive potentials between males and females lead to different
@@ -289,11 +287,11 @@ cooperation, presently, we are unaware of any systematic attempt to
 leverage time series data to assess whether religious behaviours cause
 greater offspring.
 
-Here, we address this gap in understanding by quantitatively assessing
-the causal effects of regular religious service attendance on offspring
-in a population of {[}\textbf{Radim to clarify \ldots US
-citizens\ldots{}}{]} (2) Male-specific enhancements to fertility within
-this same population.
+Here, we first address this gap in understanding by quantitatively
+assessing the causal effects of regular religious service attendance on
+offspring in a population of {[}\textbf{describe here}{]}. Secondly, we
+consider male-specific enhancements to fertility within this same
+population.
 
 \subsection{Method}\label{method}
 
@@ -343,8 +341,7 @@ prevalence effect (described below.)
 \subsubsection{Exposure or Treatment
 Variable}\label{exposure-or-treatment-variable}
 
-Our study aimed to estimate causal effects by comparing two potential
-interventions:
+We estimated causal effects by comparing two interventions:
 
 \begin{enumerate}
 \def\labelenumi{\arabic{enumi}.}
@@ -390,21 +387,31 @@ were between 13 and 17 years old at baseline, their fertility was
 assessed from 23 to 27 years old. {[}\textbf{Radim to check}{]}
 
 We effects on the probability of having two or more children in 2013 --
-or `replacement fertility'\ldots. {[}JS SAY MORE{]}.
+or `replacement fertility'\ldots. {[}\textbf{say more}{]}.
 
 \subsubsection{Inclusion Criteria}\label{inclusion-criteria}
 
-\begin{itemize}
+\begin{enumerate}
+\def\labelenumi{\arabic{enumi}.}
 \tightlist
+\item
+  Responded at baseline.
 \item
   No missing data in the baseline wave for the religious service
   attendance.
 \item
-  Missing covariate data at baseline were permitted.
-\end{itemize}
+  Missing covariate data at baseline were permitted, handled using
+  imputation in the \texttt{mice} package
+  (\citeproc{ref-vanbuuren2018}{Van Buuren, 2018})
+\item
+  Loss-to-follow up permitted in both the exposure and outcome waves,
+  handled using inverse-probability of censoring weights
+  (\citeproc{ref-bulbulia2024PRACTICAL}{Bulbulia, 2024a};
+  \citeproc{ref-williams2021}{Williams \& Díaz, 2021}).
+\end{enumerate}
 
-A total of 3,365 individuals met these criteria and were included in the
-study.
+Of the original 3,370 orgiginal participants, a total of 3,365
+individuals met these criteria and were included in the study.
 
 \newpage{}
 
@@ -502,19 +509,20 @@ Unknown & 0 & 774 \\
 
 \end{longtable}
 
-tbl-table-exposures-code presents baseline (NZAVS time 10) and exposure
-wave (NZAVS time 11) statistics for the exposure variable: forgiveness
-(range 1-7). All models adjusted for the pandemic alert level because
-the treatment wave (NZAVS time 11) occurred during New Zealand's
-COVID-19 pandemic. The pandemic is not a ``confounder'' because a
-confounder must be related both to the treatment and the outcome. At the
-end of the study, however, all participants had been exposed to the
-global pandemic. However, to satisfy the causal consistency assumption,
-all treatments must be conditionally equivalent within levels of all
-covariates (\citeproc{ref-vanderweele2013}{VanderWeele \& Hernan,
-2013}). Because COVID may have changed the quality and accessibility of
-forgiveness, we included each participants lockdown condition as a
-covariate (\citeproc{ref-sibley2021}{Sibley, 2021}). We employed inverse
+Table~\ref{tbl-table-exposures-code} presents baseline (NZAVS time 10)
+and exposure wave (NZAVS time 11) statistics for the exposure variable:
+forgiveness (range 1-7). All models adjusted for the pandemic alert
+level because the treatment wave (NZAVS time 11) occurred during New
+Zealand's COVID-19 pandemic. The pandemic is not a ``confounder''
+because a confounder must be related both to the treatment and the
+outcome. At the end of the study, however, all participants had been
+exposed to the global pandemic. However, to satisfy the causal
+consistency assumption, all treatments must be conditionally equivalent
+within levels of all covariates
+(\citeproc{ref-vanderweele2013}{VanderWeele \& Hernan, 2013}). Because
+COVID may have changed the quality and accessibility of forgiveness, we
+included each participants lockdown condition as a covariate
+(\citeproc{ref-sibley2021}{Sibley, 2021}). We employed inverse
 probability of censoring weights, which were computed non-parametrically
 within our statistical models using the \texttt{lmtp} package to
 mitigate systematic biases arising from attrition and missingness.
@@ -617,7 +625,7 @@ waves. The process involved the following steps:
   multiplying the inverse probability weights by the marginal
   probability of not being lost to follow-up.
 \item
-  These stabilized censoring weights were then combined with the
+  These stabilised censoring weights were then combined with the
   original sample weights to create composite weights for subsequent
   analyses.
 \item
@@ -664,6 +672,11 @@ fundamental assumptions:
   spectrum of observed covariate combinations (Westreich \& Cole
   (\citeproc{ref-westreich2010}{2010})).
 \end{enumerate}
+
+For further discussion, see Bulbulia
+(\citeproc{ref-bulbulia2023}{2024c}); Bulbulia et al.
+(\citeproc{ref-bulbulia2023a}{2023}); Bulbulia
+(\citeproc{ref-bulbulia2023b}{2023})
 
 The target population for this study comprises {[}\textbf{Radim to
 check}{]}
@@ -982,23 +995,21 @@ Our findings may be summaries as follows:
   confounding.
 \item
   Sex-Specific Effects:
-
-  \begin{itemize}
-  \tightlist
-  \item
-    Females: There's a 30.3\% increase in probability for females (RR =
-    1.303, 95\% CI: 0.804 to 2.112), but this effect is not
-    statistically reliable as the confidence interval includes 1. We
-    cannot rule out the prospect that religious service attendance has
-    no effect in the eight years following the regular religious service
-    `treatment.'
-  \item
-    Males: There's a much larger 214.2\% increase in probability for
-    males (RR = 3.142, 95\% CI: 1.435 to 6.878). This effect is
-    statistically reliable and considerably more robust than for
-    females.
-  \end{itemize}
 \end{enumerate}
+
+\begin{itemize}
+\tightlist
+\item
+  Females: There's a 30.3\% increase in probability for females (RR =
+  1.303, 95\% CI: 0.804 to 2.112), but this effect is not statistically
+  reliable as the confidence interval includes 1. We cannot rule out the
+  prospect that religious service attendance has no effect in the eight
+  years following the regular religious service `treatment.'
+\item
+  Males: There's a much larger 214.2\% increase in probability for males
+  (RR = 3.142, 95\% CI: 1.435 to 6.878). This effect is statistically
+  reliable and considerably more robust than for females.
+\end{itemize}
 
 We infer that the causal effect of religious service attendance in the
 target population (defined to be the sample population at baseline) is
@@ -1022,11 +1033,15 @@ uncertainty in the precise magnitude of these effects.
 \begin{itemize}
 \tightlist
 \item
-  Population
+  Population. Generality?
 \item
-  Sample (young)
+  Sample (young not much scope for religious change or for fertility)
 \item
-  Measures -- can be unmeasured confounding
+  Uncertainty in the location estimates for males (although bounded from
+  zero).
+\item
+  Reliance on model assumptions for missingingness (MAR
+  assumptions\ldots)
 \end{itemize}
 
 \subsubsection{Strengths}\label{strengths}
@@ -1034,15 +1049,13 @@ uncertainty in the precise magnitude of these effects.
 \begin{itemize}
 \tightlist
 \item
-  Evidence for causal effect of religious service on fertility
+  Evidence for causal effect of religious service on fertility is
+  considerable, particularly for males.
 \item
-  Clear difference by gender: males replacing earlier.
+  Evidence is causal.
+\item
+  Sensitivity analysis shows robustness to unmeasured confounding .
 \end{itemize}
-
-\subsubsection{Evidence for Gender-Specific
-Effects?}\label{evidence-for-gender-specific-effects}
-
-Not necessarily
 
 Future research\ldots{} etc.
 
@@ -1053,6 +1066,11 @@ Future research\ldots{} etc.
 \emph{include}
 
 \subsubsection{Data Availability}\label{data-availability}
+
+The code for this analysis can be found here:
+https://github.com/go-bayes/models/blob/main/scripts/24-radim-usa/jb-analysis-for-radim.R
+
+{[}radim to provide data as ethics permits{]}
 
 \subsubsection{Acknowledgements}\label{acknowledgements}
 
@@ -1114,6 +1132,10 @@ Blume, M. (2009). The reproductive benefits of religious affiliation.
 \emph{The Biological Evolution of Religious Mind and Behavior},
 117--126.
 
+\bibitem[\citeproctext]{ref-bulbulia2023b}
+Bulbulia, J. A. (2023). \emph{Causal diagrams (directed acyclic graphs):
+A practical guide}. \url{https://osf.io/b23k7}
+
 \bibitem[\citeproctext]{ref-bulbulia2024PRACTICAL}
 Bulbulia, J. A. (2024a). A practical guide to causal inference in
 three-wave panel studies. \emph{PsyArXiv Preprints}.
@@ -1122,6 +1144,15 @@ three-wave panel studies. \emph{PsyArXiv Preprints}.
 \bibitem[\citeproctext]{ref-margot2024}
 Bulbulia, J. A. (2024b). \emph{Margot: MARGinal observational
 treatment-effects}. \url{https://doi.org/10.5281/zenodo.10907724}
+
+\bibitem[\citeproctext]{ref-bulbulia2023}
+Bulbulia, J. A. (2024c). Methods in causal inference part 1: Causal
+diagrams and confounding. \emph{Evolutionary Human Sciences}, \emph{6}.
+
+\bibitem[\citeproctext]{ref-bulbulia2023a}
+Bulbulia, J. A., Afzali, M. U., Yogeeswaran, K., \& Sibley, C. G.
+(2023). Long-term causal effects of far-right terrorism in {N}ew
+{Z}ealand. \emph{PNAS Nexus}, \emph{2}(8), pgad242.
 
 \bibitem[\citeproctext]{ref-Bulbulia_2015}
 Bulbulia, J. A., Shaver, J. H., Greaves, L., Sosis, R., \& Sibley, C. G.
@@ -1185,11 +1216,9 @@ Hoffman, K. L., Salazar-Barreto, D., Rudolph, K. E., \& Díaz, I. (2023).
 framework for studying complex exposures}.
 \url{https://doi.org/10.48550/arXiv.2304.09460}
 
-\bibitem[\citeproctext]{ref-kaplan2000theory}
-Kaplan, H., Hill, K., Lancaster, J., \& Hurtado, A. M. (2000). A theory
-of human life history evolution: Diet, intelligence, and longevity.
-\emph{Evolutionary Anthropology: Issues, News, and Reviews: Issues,
-News, and Reviews}, \emph{9}(4), 156--185.
+\bibitem[\citeproctext]{ref-irons2001religion}
+Irons, W. (2001). Religion as a hard-to-fake sign of commitment.
+\emph{Evolution and the Capacity for Commitment}, \emph{292309}.
 
 \bibitem[\citeproctext]{ref-polspline_2024}
 Kooperberg, C. (2024). \emph{Polspline: Polynomial spline routines}.
