--- a/manuscripts/24-aaron-psychopathy/24-manuscript-aaron-psychopathy.qmd
+++ b/manuscripts/24-aaron-psychopathy/24-manuscript-aaron-psychopathy.qmd
@@ -1,7 +1,6 @@
 ---
 title: "Causal effect of Psychopathy on Partner Well-Being: A National Longitudinal Study"
 abstract: |
-  
 author: 
   - name: Aaron Hissey
     affiliation: Victoria University of Wellington, New Zealand
@@ -34,6 +33,8 @@ keywords:
 editor_options: 
   chunk_output_type: console
 format:
+  docx:
+    bibliography: /Users/joseph/GIT/templates/bib/references.bib
   pdf:
     sanitize: true
     keep-tex: true
@@ -171,7 +172,7 @@ antagonism_t_tab <- readRDS(here::here(push_mods_antagonism, "t_tab"))
 
 antagonism_standard_deviation_exposure <- readRDS(here::here(push_mods_antagonism, "standard_deviation_exposure"))
 
-
+antagonism_standard_deviation_exposure
 ## disinhibition
 
 disinhibition_tab_outcomes_loss <-  readRDS(here::here(push_mods_disinhibition, "tab_outcomes_loss"))
@@ -185,7 +186,6 @@ disinhibition_group_tab_outcomes_gain <-  readRDS(here::here(push_mods_disinhibi
 disinhibition_t_tab <- readRDS(here::here(push_mods_disinhibition, "t_tab"))
 
 disinhibition_standard_deviation_exposure <- readRDS(here::here(push_mods_disinhibition, "standard_deviation_exposure"))
-
 
 ## emotional stability 
 emotional_tab_outcomes_loss <-  readRDS(here::here(push_mods_emotional, "tab_outcomes_loss"))
@@ -639,7 +639,7 @@ To measure senstivity to unmeasured confounding, we report VanderWeele and Ding'
 #| fig-height: 6
 #| fig-width: 8
 
-antagonism_standard_deviation_exposure
+#antagonism_standard_deviation_exposure
 ```
 
 #### Transition table
@@ -781,7 +781,7 @@ For the outcome 'Loss psychopathy antagonism: partner conflict in a relationship
 #| fig-height: 6
 #| fig-width: 8
 
-disinhibition_standard_deviation_exposure
+#disinhibition_standard_deviation_exposure
 ```
 
 
@@ -925,7 +925,7 @@ For the outcome 'Loss psychopathy disinhibition: partner self-esteem', the ATE c
 #| fig-height: 6
 #| fig-width: 8
 
-emotional_standard_deviation_exposure
+#emotional_standard_deviation_exposure
 
 ```
 
@@ -1073,7 +1073,7 @@ For the outcome 'Loss psychopathy emotional stability: partner relationship sati
 #| fig-height: 6
 #| fig-width: 8
 
-narcl_standard_deviation_exposure
+#narcl_standard_deviation_exposure
 
 ```
 
@@ -1221,7 +1221,7 @@ For the outcome 'Loss psychopathy narcissism: partner conflict in a relationship
 #| fig-height: 6
 #| fig-width: 8
 
-psychopathy_combined_standard_deviation_exposure
+#psychopathy_combined_standard_deviation_exposure
 ```
 
 
