--- a/manuscripts/24-aaron-usa-perfectionism-relationship-dyads/24-aaron-dyads-perfectionism-relationship-quality.qmd
+++ b/manuscripts/24-aaron-usa-perfectionism-relationship-dyads/24-aaron-dyads-perfectionism-relationship-quality.qmd
@@ -886,10 +886,12 @@ We assessed occupational prestige and status using the New Zealand Socio-economi
 
 We assessed occupational prestige and status using the New Zealand Socio-economic Index 13 (NZSEI-13) [@fahy2017]. This index uses the income, age, and education of a reference group, in this case, the 2013 New Zealand census, to calculate a score for each occupational group. Scores range from 10 (Lowest) to 90 (Highest). This list of index scores for occupational groups was used to assign each participant a NZSEI-13 score based on their occupation.
 
-<!-- We asked participants, "If you are a parent, what is the birth date of your eldest child?". -->
-<!-- #### Parent (waves: 5-15) -->
+ #### Parent 
 
-<!-- We asked participants, "If you are a parent, what is the birth date of your eldest child?" or "If you are a parent, in which year was your eldest child born?" (waves: 10-15). Parents were coded as 1, while the others were coded as 0. --> 
+ (waves: 5-9)
+We asked participants, "If you are a parent, what is the birth date of your eldest child?". -->
+
+We asked participants, "If you are a parent, what is the birth date of your eldest child?" or "If you are a parent, in which year was your eldest child born?" (waves: 10-15). Parents were coded as 1, while the others were coded as 0. 
 
 #### Number of Children (waves: 1-3, 4-15)
 
